Tested zk setup and made required changes